# envpilot

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README_TEMPLATES.md  envpilot-lock.json  pyproject.toml  requirements.txt
envpilot/: cleaner.py  cli.py  manager.py  matcher.py  pyvenv.cfg  scanner.py  syncer.py
envpilot/Scripts/: activate  activate.bat
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat  jsonpointer
templates/: datascience.yml  django.yml  fastapi.yml  flask.yml  machinelearning.yml  scrapy.yml
